--- a/linux环境编程基础/静态库的制作/制作方法.md
+++ b/linux环境编程基础/静态库的制作/制作方法.md
@@ -3,18 +3,23 @@
 
 说明： 静态库是在运气之前的链接阶段就复制到程序中，静态库由多个目标文件组成
 
-## 命名规则： lib名字.a
+## 命名规则： 
+
+lib名字.a
 
 ## 制作命令:  
 
-ar rcs libxxx.a xxx.o xxx.o
+`ar rcs libxxx.a xxx.o xxx.o`
 
 .o文件通过gcc来获得
 
 ar是archive工具
 
 rcs是一个打包命令：
+
   r – 将文件插入备存文件中
+  
   c – 建立备存文件
+  
   s – 索引
 
