--- a/linux环境编程基础/静态库的制作/制作方法.md
+++ b/linux环境编程基础/静态库的制作/制作方法.md
@@ -23,3 +23,9 @@ rcs是一个打包命令：
   
   s – 索引
 
+## 制作过程
+以本目录的calc文件夹为例
+gcc -c add.c div.c mult.c sub.c  --------生成目标文件
+
+ar rcs libcalc.a add.o div.o mult.o sub.o ------------制作静态库
+
