--- a/linux环境编程基础/静态库的制作/制作方法.md
+++ b/linux环境编程基础/静态库的制作/制作方法.md
@@ -27,7 +27,25 @@ rcs是一个打包命令：
 ## 制作过程
 以本目录的calc文件夹为例
 
-gcc -c add.c div.c mult.c sub.c  --------生成目标文件
+`gcc -c add.c div.c mult.c sub.c`  --------生成目标文件
 
-ar rcs libcalc.a add.o div.o mult.o sub.o ------------制作静态库
+`ar rcs libcalc.a add.o div.o mult.o sub.o` ------------制作静态库
+
+# 静态库的使用
+制作的静态库的目录结构
+
+├── include
+│   └── head.h
+├── lib
+│   └── libcalc.a
+├── main.c
+└── src
+    ├── add.c
+    ├── div.c
+    ├── mult.c
+    └── sub.c
+include目录下的头文件供别人使用，头文件关联的静态库放在lib文件目录中
+
+
+
 
