Update and rename 制作方法.md to 制作与使用方法.md

--- a/linux环境编程基础/静态库的制作/制作与使用方法.md
+++ b/linux环境编程基础/静态库的制作/制作与使用方法.md
@@ -33,19 +33,35 @@ rcs是一个打包命令：
 
 # 静态库的使用
 制作的静态库的目录结构
+```
+├── include  
+│   └── head.h  
+├── lib  
+│   └── libcalc.a  
+├── main.c  
+└── src  
+    ├── add.c  
+    ├── div.c  
+    ├── mult.c  
+    └── sub.c  
+```
+include目录下的头文件供别人使用，头文件关联的静态库放在lib文件目录中  
 
-├── include
-│   └── head.h
-├── lib
-│   └── libcalc.a
-├── main.c
-└── src
-    ├── add.c
-    ├── div.c
-    ├── mult.c
-    └── sub.c
-include目录下的头文件供别人使用，头文件关联的静态库放在lib文件目录中
+在main.c中使用了calc库，下面是编译指令  
+```
+gcc -o main main.c -I ./include/ -l calc -L ./lib/
+```
+-I: 指定include的目录  
+-l：表示后面我要关联的lib文件  
+-L: 指定lib的目录  
 
-
+可以运行出下面结果就表示制作成功了  
+```
+a = 20, b = 12
+a + b = 32
+a - b = 8
+a * b = 240
+a / b = 1.666667
+```
 
 
