--- a/linux环境编程基础/静态库的制作/制作与使用方法.md
+++ b/linux环境编程基础/静态库的制作/制作与使用方法.md
@@ -32,7 +32,8 @@ rcs是一个打包命令：
 `ar rcs libcalc.a add.o div.o mult.o sub.o` ------------制作静态库
 
 # 静态库的使用
-制作的静态库的目录结构
+制作的静态库的目录结构 
+本目录提供的`library`是初始状态，需要自己将libcalc.a放过来
 ```
 ├── include  
 │   └── head.h  
