--- a/linux环境编程基础/动态库的制作/制作与使用方法.md
+++ b/linux环境编程基础/动态库的制作/制作与使用方法.md
@@ -6,8 +6,8 @@ libxxx.so
 
 ## 动态库的制作
 ```
-gcc -c –fpic/-fPIC a.c b.c --------------gcc 得到 .o 文件，得到和位置无关的代码
-gcc -shared a.o b.o -o libcalc.so  --------------gcc 得到动态库
+gcc -c -fpic add.c div.c mult.c sub.c --------------gcc 得到 .o 文件，得到和位置无关的代码
+gcc -shared -o libcalc.so add.o div.o mult.o sub.o  --------------gcc 得到动态库
 
 –fpic/-fPIC 在x86架构上是一样的效果
 ```
