--- a/linux环境编程基础/动态库的制作/制作与使用方法.md
+++ b/linux环境编程基础/动态库的制作/制作与使用方法.md
@@ -22,6 +22,14 @@ gcc -o main main.c -I ./include/ -L ./lib/ -l calc
 ```
 程序没有在运行的时候，动态装载新的资源到内存中的权限，这部分是靠**ld-linux.so**来完成  
 程序启动之后，动态库会被动态加载到内存中，通过 ldd （list dynamic dependencies）命令检查动态库依赖关系  
+```
+leo@leo-virtual-machine:~/linux/lession04/library$ ldd main
+	linux-vdso.so.1 (0x00007ffc3b6fa000)
+	libcalc.so => not found--------------可以发现没有找到这个动态库
+	libc.so.6 => /lib/x86_64-linux-gnu/libc.so.6 (0x00007fe80ecae000)
+	/lib64/ld-linux-x86-64.so.2 (0x00007fe80f2a1000)
+
+```
 
 ### 如何定位共享库文件呢？
 当系统加载可执行代码时候，能够知道其所依赖的库的名字，但是还需要知道绝对路径。此时就需要系统的动态载入器来获取该绝对路径。对于elf格式的可执行程序，是由ld-linux.so来完成的，它先后搜索elf文件的 DT_RPATH段 ——> 环境变量LD_LIBRARY_PATH ——> /etc/ld.so.cache文件列表 ——> /lib/，/usr/lib
