--- a/linux环境编程基础/动态库的制作/制作与使用方法.md
+++ b/linux环境编程基础/动态库的制作/制作与使用方法.md
@@ -37,3 +37,19 @@ leo@leo-virtual-machine:~/linux/lession04/library$ ldd main
 
 **需要在DT_RPATH段 ——> 环境变量LD_LIBRARY_PATH ——> /etc/ld.so.cache文件列表 ——> /lib/，/usr/lib 某一个配置一下  
 动态库的绝对路径** 
+
+### 添加到环境变量
+编辑~/.bashrc
+在最后加上`export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/leo/linux/lession04/library/lib`
+然后在终端上`source ~/.bashrc`
+这样就可以执行成功了
+```
+leo@leo-virtual-machine:~/linux/lession04/library$ ./main
+a = 20, b = 12
+a + b = 32
+a - b = 8
+a * b = 240
+a / b = 1.666667
+```
+
+
