--- a/linux环境编程基础/Makefile/使用方法.md
+++ b/linux环境编程基础/Makefile/使用方法.md
@@ -9,3 +9,11 @@
   ⚫ 依赖：生成目标所需要的文件或是目标  
   ⚫ 命令：通过执行命令对依赖操作生成目标（命令前必须 Tab 缩进）  
 2. Makefile 中的其它规则一般都是为第一条规则服务的  
+
+## 以编译calc文件为例
+在calc目录中添加Makefile文件，写上如下内容
+```
+app: add.c div.c main.c mult.c sub.c
+	gcc -o app add.c div.c main.c mult.c sub.c
+```
+在本目录输入make，就会自动编译了，编译之后产生可执行的程序app
