--- a/linux环境编程基础/Makefile/使用方法.md
+++ b/linux环境编程基础/Makefile/使用方法.md
@@ -42,3 +42,17 @@ main.o:main.c
 第一个版本如果某个源文件发生了变化，则会执行`gcc -o app add.o div.o main.o mult.o sub.o`, 会把其他的源代码文件都要重新编译一边  
 第二个版本如果某个源代码文件发生了变化，则只会改变对于的目标.o文件，其他的目标文件不会重新生成，之后再重新链接一下即可，效率更高  
 
+# makefile变量的使用
+**自定义变量**  
+	`变量名=变量值 var=hello`   
+**预定义变量**  
+```
+	AR : 归档维护程序的名称，默认值为 ar  
+	CC : C 编译器的名称，默认值为 cc  ---默认就是gcc
+	CXX : C++ 编译器的名称，默认值为 g++  
+	$@ : 目标的完整名称  
+	$< : 第一个依赖文件的名称  
+	$^ : 所有的依赖文件  
+```
+**获取变量的值**  
+	`$(变量名)`  
