--- a/linux环境编程基础/Makefile/使用方法.md
+++ b/linux环境编程基础/Makefile/使用方法.md
@@ -39,7 +39,7 @@ main.o:main.c
 	gcc -o main.o -c main.c
 ```
 **两个版本的区别**  
-第一个版本如果某个源文件发生了变化，则会执行`gcc -o app add.o div.o main.o mult.o sub.o`, 会把其他的源代码文件都要重新编译一边  
+第一个版本如果某个源文件发生了变化，则会执行`gcc -o app add.o div.o main.o mult.o sub.o`, 会把其他的源代码文件都要重新编译一遍  
 第二个版本如果某个源代码文件发生了变化，则只会改变对于的目标.o文件，其他的目标文件不会重新生成，之后再重新链接一下即可，效率更高  
 
 # makefile变量的使用
