--- a/linux环境编程基础/Makefile/使用方法.md
+++ b/linux环境编程基础/Makefile/使用方法.md
@@ -56,3 +56,97 @@ main.o:main.c
 ```
 **获取变量的值**  
 	`$(变量名)`  
+**例子**
+```
+app:main.c a.c b.c
+gcc -c main.c a.c b.c
+#自动变量只能在规则的命令中使用
+app:main.c a.c b.c
+$(CC) -c $^ -o $@
+```
+# makefile函数
+## `$(wildcard PATTERN...)`
+功能：获取指定目录下指定类型的文件列表  
+参数：PATTERN 指的是某个或多个目录下的对应的某种类型的文件，如果有多个目录，一般使用空格间隔  
+返回：得到的若干个文件的文件列表，文件名之间使用空格间隔  
+示例：
+	`$(wildcard *.c ./sub/*.c)`
+返回值格式: `a.c b.c c.c d.c e.c f.c`
+## `$(patsubst <pattern>,<replacement>,<text>)`
+功能：查找<text>中的单词(单词以“空格”、“Tab”或“回车”“换行”分隔)是否符合模式<pattern>，如果匹配的话，则以<replacement>替换。
+<pattern>可以包括通配符`%`，表示任意长度的字串。如果<replacement>
+中也包含`%`，那么，<replacement>中的这个`%`将是<pattern>中的那个%
+所代表的字串。(可以用`\`来转义，以`\%`来表示真实含义的`%`字符)  返回：函数返回被替换过后的字符串
+示例：
+	`$(patsubst %.c, %.o, x.c bar.c)`
+返回值格式:`x.o bar.o`
+## 简化1
+使用预定义变量  
+```
+app: add.o div.o main.o mult.o sub.o
+	gcc -o app add.o div.o main.o mult.o sub.o
+add.o: add.c
+	$(CC) -c $< -o $@
+div.o:div.c
+	$(CC) -c $< -o $@
+mult.o:mult.c
+	$(CC) -c $< -o $@
+sub.o: sub.c
+	$(CC) -c $< -o $@
+main.o:main.c
+	$(CC) -c $< -o $@
+```
+## 简化2
+使用自定义变量
+```
+objs = add.o div.o main.o mult.o sub.o
+target = app
+$(target): $(objs)
+	$(CC) -o $(target) $(objs)
+add.o: add.c
+	$(CC) -c $< -o $@
+div.o:div.c
+	$(CC) -c $< -o $@
+mult.o:mult.c
+	$(CC) -c $< -o $@
+sub.o: sub.c
+	$(CC) -c $< -o $@
+main.o:main.c
+	$(CC) -c $< -o $@
+```
+## 化简3
+使用通配符
+```
+ojbs = add.o div.o main.o mult.o sub.o
+target = app
+$(target): $(ojbs)
+	$(CC) -o $(target) $(ojbs)
+%.o:%.C -------------$(ojbs)会去匹配%.o, 比如add.o 匹配上了%.o, 现在%就是add了，就变成了add.o:add.c
+	$(CC) -c %< -o %@
+```
+## 化简4
+使用makefile函数来从本地自动获取.c文件，并转换成.o文件列表  
+```
+src = $(wildcard ./*c)
+ojbs = $(patsubst %.c,%.o,$(src))
+target = app
+$(target): $(ojbs)
+	$(CC) -o $(target) $(ojbs)
+%.o:%.C
+	$(CC) -c %< -o %@
+```
+## 化简5
+使用makeclean来快捷删除中间文件
+```
+	src = $(wildcard ./*c)
+ojbs = $(patsubst %.c,%.o,$(src))
+target = app
+$(target): $(ojbs)
+	$(CC) -o $(target) $(ojbs)
+%.o:%.c
+	$(CC) -c %< -o %@
+.PHONY:clean          --------------如果本地函数clean这个文件的话，make clean会把clean当成目标文件，加上这句话表示clean是伪目标
+clean:
+	rm $(target) $(ojbs)
+```
+因为make命令是执行第一条规则，而clean属于第2条规则，所以需要使用make clean才可以
