--- a/linux环境编程基础/linux系统函数/目录操作函数.md
+++ b/linux环境编程基础/linux系统函数/目录操作函数.md
@@ -127,4 +127,77 @@ struct dirent *readdir(DIR *dirp);
 #include <dirent.h>
 int closedir(DIR *dirp);
 ```
+**struct dirent结构体**
+```c
+struct dirent {
+   ino_t          d_ino;       /* Inode number */
+   off_t          d_off;       /* Not an offset; see below */
+   unsigned short d_reclen;    /* Length of this record */
+   unsigned char  d_type;      /* Type of file; not supported
+                                  by all filesystem types */
+   char           d_name[256]; /* Null-terminated filename */
+};
+```
+**d_type宏定义**
+```c
+DT_BLK      This is a block device.
+
+DT_CHR      This is a character device.
+
+DT_DIR      This is a directory.
+
+DT_FIFO     This is a named pipe (FIFO).
+
+DT_LNK      This is a symbolic link.
+
+DT_REG      This is a regular file.
+
+DT_SOCK     This is a UNIX domain socket.
+
+DT_UNKNOWN  The file type could not be determined
+```
+## 示例： 统计一个目录下有多少个普通文件
+```c
+#include <sys/types.h>
+#include <dirent.h>
+#include <stdio.h>
+#include <string.h>
+#include <stdlib.h>
+
+int dfs(const char *path);
+
+int main(int argc,char *argv[]){
+    if(argc < 2){
+        printf("usage: ./dirop filename\n");
+        return -1;
+    }
+    int total = dfs(argv[1]);
+    printf("total = %d\n",total);
+    return 0;
+}
+
+
+int dfs(const char *path){
+    printf("%s\n",path);
+    int total = 0;
+    DIR *dir = opendir(path);
+    if(dir == NULL){
+        perror("opendir:");
+        exit(0);
+    }
+    struct dirent* ptr;
+    while((ptr = readdir(dir)) != NULL){
+        if(strcmp(ptr->d_name,".") == 0 || strcmp(ptr->d_name,"..") == 0) continue;
+        if(ptr->d_type == DT_DIR){
+            char nextPath[300] = {0};
+            sprintf(nextPath,"%s/%s",path,ptr->d_name);
+            total += dfs(nextPath);
+        }
+        if(ptr->d_type == DT_REG){
+            total += 1;
+        }
+    }
+    return total;
+}
+```
 
