--- a/多进程设计/进程基础.md
+++ b/多进程设计/进程基础.md
@@ -35,3 +35,124 @@ max user processes              (-u) 15400
 virtual memory          (kbytes, -v) unlimited
 file locks                      (-x) unlimited
 ```
+# kill
+可以查看有哪些信号可以使用 kill -l 
+```
+ 1) SIGHUP	 2) SIGINT	 3) SIGQUIT	 4) SIGILL	 5) SIGTRAP
+ 6) SIGABRT	 7) SIGBUS	 8) SIGFPE	 9) SIGKILL	10) SIGUSR1
+11) SIGSEGV	12) SIGUSR2	13) SIGPIPE	14) SIGALRM	15) SIGTERM
+16) SIGSTKFLT	17) SIGCHLD	18) SIGCONT	19) SIGSTOP	20) SIGTSTP
+21) SIGTTIN	22) SIGTTOU	23) SIGURG	24) SIGXCPU	25) SIGXFSZ
+26) SIGVTALRM	27) SIGPROF	28) SIGWINCH	29) SIGIO	30) SIGPWR
+31) SIGSYS	34) SIGRTMIN	35) SIGRTMIN+1	36) SIGRTMIN+2	37) SIGRTMIN+3
+38) SIGRTMIN+4	39) SIGRTMIN+5	40) SIGRTMIN+6	41) SIGRTMIN+7	42) SIGRTMIN+8
+43) SIGRTMIN+9	44) SIGRTMIN+10	45) SIGRTMIN+11	46) SIGRTMIN+12	47) SIGRTMIN+13
+48) SIGRTMIN+14	49) SIGRTMIN+15	50) SIGRTMAX-14	51) SIGRTMAX-13	52) SIGRTMAX-12
+53) SIGRTMAX-11	54) SIGRTMAX-10	55) SIGRTMAX-9	56) SIGRTMAX-8	57) SIGRTMAX-7
+58) SIGRTMAX-6	59) SIGRTMAX-5	60) SIGRTMAX-4	61) SIGRTMAX-3	62) SIGRTMAX-2
+63) SIGRTMAX-1	64) SIGRTMAX
+
+kill [-signal] pid
+kill –l 列出所有信号
+kill –SIGKILL 进程ID
+kill -9 进程ID
+killall name 根据进程名杀死进程
+```
+# 让进程在后台运行
+在命令最后加一个&就可以了
+# 查看进程
+```
+ps aux / ajx
+a：显示终端上的所有进程，包括其他用户的进程
+u：显示进程的详细信息
+x：显示没有控制终端的进程
+j：列出与作业控制相关的信息
+
+
+ps aux
+USER        PID %CPU %MEM    VSZ   RSS TTY      STAT START   TIME COMMAND
+root          1  0.0  0.2 225320  8936 ?        Ss   10:40   0:14 /sbin/init splash
+root          2  0.0  0.0      0     0 ?        S    10:40   0:00 [kthreadd]
+root          3  0.0  0.0      0     0 ?        I<   10:40   0:00 [rcu_gp]
+root          4  0.0  0.0      0     0 ?        I<   10:40   0:00 [rcu_par_gp]
+root          6  0.0  0.0      0     0 ?        I<   10:40   0:00 [kworker/0:0H-kb]
+root          8  0.0  0.0      0     0 ?        I<   10:40   0:00 [mm_percpu_wq]
+root          9  0.0  0.0      0     0 ?        S    10:40   0:00 [ksoftirqd/0]
+root         10  0.1  0.0      0     0 ?        I    10:40   0:46 [rcu_sched]
+root         11  0.0  0.0      0     0 ?        S    10:40   0:00 [migration/0]
+root         12  0.0  0.0      0     0 ?        S    10:40   0:00 [idle_inject/0]
+root         14  0.0  0.0      0     0 ?        S    10:40   0:00 [cpuhp/0]
+root         15  0.0  0.0      0     0 ?        S    10:40   0:00 [cpuhp/1]
+root         16  0.0  0.0      0     0 ?        S    10:40   0:00 [idle_inject/1]
+root         17  0.0  0.0      0     0 ?        S    10:40   0:02 [migration/1]
+root         18  0.0  0.0      0     0 ?        S    10:40   0:03 [ksoftirqd/1]
+root         20  0.0  0.0      0     0 ?        I<   10:40   0:00 [kworker/1:0H-kb]
+root         21  0.0  0.0      0     0 ?        S    10:40   0:00 [kdevtmpfs]
+....
+STAT参数意义：
+D 不可中断 Uninterruptible（usually IO） R 正在运行，或在队列中的进程
+S(大写) 处于休眠状态
+T 停止或被追踪
+Z 僵尸进程
+W 进入内存交换（从内核2.6开始无效）
+X 死掉的进程
+< 高优先级
+N 低优先级
+s 包含子进程
++ 位于前台的进程组
+```
+# 查看终端号
+```
+tty
+/dev/pts/7
+```
+# top 实时查看进程信息
+```
+top - 20:21:57 up  9:41,  5 users,  load average: 0.00, 0.00, 0.00
+任务: 322 total,   1 running, 247 sleeping,   0 stopped,   0 zombie
+%Cpu(s):  0.2 us,  0.3 sy,  0.0 ni, 99.5 id,  0.0 wa,  0.0 hi,  0.0 si,  0.0 st
+KiB Mem :  3994712 total,   903504 free,  1318368 used,  1772840 buff/cache
+KiB Swap:  1942896 total,  1942896 free,        0 used.  2397108 avail Mem 
+
+进程 USER      PR  NI    VIRT    RES    SHR 䞠%CPU %MEM     TIME+ COMMAND                                    
+  6859 leo       20   0   46028   4300   3512 R   1.0  0.1   0:00.25 top                                       
+  1592 leo       20   0 3484092 195048  93940 S   0.3  4.9   0:35.53 gnome-shell                               
+  3964 leo       20   0  699616  51656  32608 S   0.3  1.3   0:55.58 node                                      
+  5272 root      20   0       0      0      0 I   0.3  0.0   0:20.59 kworker/1:0-eve                           
+  6856 root      20   0       0      0      0 I   0.3  0.0   0:00.05 kworker/u256:0-                           
+     1 root      20   0  225320   8936   6464 S   0.0  0.2   0:14.85 systemd                                   
+     2 root      20   0       0      0      0 S   0.0  0.0   0:00.10 kthreadd                                  
+     3 root       0 -20       0      0      0 I   0.0  0.0   0:00.00 rcu_gp                                    
+     4 root       0 -20       0      0      0 I   0.0  0.0   0:00.00 rcu_par_gp                                
+     6 root       0 -20       0      0      0 I   0.0  0.0   0:00.00 kworker/0:0H-kb                           
+     8 root       0 -20       0      0      0 I   0.0  0.0   0:00.00 mm_percpu_wq                              
+     9 root      20   0       0      0      0 S   0.0  0.0   0:00.38 ksoftirqd/0                               
+    10 root      20   0       0      0      0 I   0.0  0.0   0:47.17 rcu_sched                                 
+    11 root      rt   0       0      0      0 S   0.0  0.0   0:00.82 migration/0                               
+    12 root     -51   0       0      0      0 S   0.0  0.0   0:00.00 idle_inject/0                             
+    14 root      20   0       0      0      0 S   0.0  0.0   0:00.00 cpuhp/0                                   
+    15 root      20   0       0      0      0 S   0.0  0.0   0:00.00 cpuhp
+    ....
+    
+可以在使用 top 命令时加上 -d 来指定显示信息更新的时间间隔，在 top 命令
+执行后，可以按以下按键对显示的结果进行排序：
+⚫ M 根据内存使用量排序
+⚫ P 根据 CPU 占有率排序
+⚫ T 根据进程运行时间长短排序
+⚫ U 根据用户名来筛选进程
+⚫ K 输入指定的 PID 杀死进程
+```
+# 进程号
+```c
+每个进程都由进程号来标识，其类型为 pid_t（整型），进程号的范围：0～32767。
+进程号总是唯一的，但可以重用。当一个进程终止后，其进程号就可以再次使用。
+◼ 任何进程（除 init 进程）都是由另一个进程创建，该进程称为被创建进程的父进程，
+对应的进程号称为父进程号（PPID）。
+◼ 进程组是一个或多个进程的集合。他们之间相互关联，进程组可以接收同一终端的各
+种信号，关联的进程有一个进程组号（PGID）。默认情况下，当前的进程号会当做当
+前的进程组号。
+◼ 进程号和进程组相关函数：
+⚫ pid_t getpid(void);
+⚫ pid_t getppid(void);
+⚫ pid_t getpgid(pid_t pid);
+```
