--- a/多进程设计/2-进程创建.md
+++ b/多进程设计/2-进程创建.md
@@ -11,7 +11,8 @@
             在子进程中返回0
             如何区分父进程和子进程：通过fork的返回值。
             在父进程中返回-1，表示创建子进程失败，并且设置errno
-        在fork()函数之后子进程和父进程是一样的代码，所以后面执行的是一样的，如果子进程和父进程执行不同的代码需要通过fork()的返回值来判断
+        在fork()函数之后子进程和父进程是一样的代码，所以后面执行的是一样的，
+        如果子进程和父进程执行不同的代码需要通过fork()的返回值来判断
 
         父子进程之间的关系：
         区别：
