--- a/多进程设计/2-进程创建.md
+++ b/多进程设计/2-进程创建.md
@@ -79,3 +79,38 @@ pid = 3718: 12
 pid = 3719: 3
 ```
 **注意**： 如果子进程在getppid()的时候，父进程已经退出了，那么子进程会被进程1托管，所以getppid()会得到1
+
+# 虚拟地址空间
+在父进程使用fork()之后，会让把父进程的地址空间拷贝给子进程，内容一样，两个进程使用不同的地址空间。  
+**注意**： 对于`pid_t pid = fork()`，会把局部变量pid = 0拷贝给子进程，而父进程是通过得到子进程的进程id来返回的，所以会不同。  
+**虚拟地址**：对于下面的程序，会发现子进程和父进程输出同一个变量的地址是一样的,这就是因为使用了虚拟地址空间，  
+在程序中得到的变量地址是`逻辑地址`,而不是`物理地址`
+```c
+#include <stdio.h>
+#include <sys/types.h>
+#include <unistd.h>
+int main(){
+    int num = 10;
+    printf("original num: %d\n", num);
+    //输出原地址
+    printf("Address of original num: %p\n", &num); 
+    pid_t pid = fork();
+    
+    if (pid > 0){
+        printf("Parent process, PID = %d\n", getpid());
+        num += 1;
+        printf("num+1 in parent process: %d\n", num);   
+        //输出父进程中num的地址
+        printf("Address of num in parent precess: %p\n", &num);
+    }
+    
+    if (pid == 0){
+        printf("Child process, PID = %d\n", getpid());
+        num += 2;
+        printf("num+2 in child process: %d\n", num);
+        //输出子进程中num的地址
+        printf("Address of num in child precess: %p\n", &num);
+    }
+    return 0;
+}
+```
