--- a/多进程设计/2-进程创建.md
+++ b/多进程设计/2-进程创建.md
@@ -85,8 +85,7 @@ pid = 3719: 3
 **注意**： 对于`pid_t pid = fork()`，会把局部变量pid = 0拷贝给子进程，而父进程是通过得到子进程的进程id来返回的，所以会不同。  
 **虚拟地址**：对于下面的程序，会发现子进程和父进程输出同一个变量的地址是一样的,这就是因为使用了虚拟地址空间，  
 在程序中得到的变量地址是`逻辑地址`,而不是`物理地址`
-**读时共享，写时拷贝**：如果某个变量只是父子进程读取，那么这个变量只会保留在父进程中，子进程去读取父进程的。如果子进程或者父进程  
-要对变量进行写入，则会拷贝一份给子进程作为独立的变量，这样就互不影响了。  
+**读时共享，写时拷贝**：如果某个变量只是父子进程读取，那么这个变量只会保留在父进程中，子进程去读取父进程的。如果子进程或者父进程要对变量进行写入，则会拷贝一份给子进程作为独立的变量，这样就互不影响了。  
 ```c
 #include <stdio.h>
 #include <sys/types.h>
