--- a/多进程设计/4-进程退出.md
+++ b/多进程设计/4-进程退出.md
@@ -72,4 +72,59 @@ leo        3574  0.0  0.0      0     0 pts/1    Z+   11:57   0:00 [zombie] <defu
 ```
 就是因为子进程结束了，父进程一直在循环，没去回收子进程  
 当我们强制结束父进程，再看ps aux就可以发现没有僵尸进程了  
+# 等待进程
+让父进程等待子进程的退出
+```
+#include <sys/types.h>
+#include <sys/wait.h>
+pid_t wait(int *wstatus);
+    功能：等待任意一个子进程结束，如果任意一个子进程结束了，次函数会回收子进程的资源。
+    参数：int *wstatus
+        进程退出时的状态信息，传入的是一个int类型的地址，传出参数。
+    返回值：
+        - 成功：返回被回收的子进程的id
+        - 失败：-1 (所有的子进程都结束，调用函数失败)
+
+调用wait函数的进程会被挂起（阻塞），直到它的一个子进程退出或者收到一个不能被忽略的信号时才被唤醒（相当于继续往下执行）
+如果没有子进程了，函数立刻返回，返回-1；如果子进程都已经结束了，也会立即返回，返回-1.
+```
+```c
+#include <sys/types.h>
+#include <sys/wait.h>
+#include <stdio.h>
+#include <sys/types.h>
+#include <unistd.h>
+#include <stdlib.h>
+
+int main(){
+    pid_t pid = fork();
+    if(pid > 0){
+        printf("father process: pid = %d, ppid = %d\n",getpid(),getppid());
+        while(1){
+            int st;
+            pid_t pid = wait(&st); //等待的时候，父进程阻塞，直到某个子进程的状态改变了才唤醒
+            if(pid == -1){
+                break;
+            }
+            if(WIFEXITED(st)){
+                printf("子进程退出的状态编号是：%d\n",WEXITSTATUS(st));
+            }
+            if(WIFSIGNALED(st)){
+                //在终端中用kill 9 child_pid就来退出子进程
+                printf("导致子进程退出的信号为：%d\n",WTERMSIG(st));
+            }
+        }
+    }else{
+        while(1){
+            printf("child process: pid = %d, ppid = %d\n",getpid(),getppid());
+            sleep(1);
+        }
+        exit(0);
+    }
+
+
+
+    return 0;
+}
+```
 
