--- a/多进程设计/4-进程退出.md
+++ b/多进程设计/4-进程退出.md
@@ -88,6 +88,42 @@ pid_t wait(int *wstatus);
 调用wait函数的进程会被挂起（阻塞），直到它的一个子进程退出或者收到一个不能被忽略的信号时才被唤醒（相当于继续往下执行）
 如果没有子进程了，函数立刻返回，返回-1；如果子进程都已经结束了，也会立即返回，返回-1.
 ```
+**状态相关函数宏**
+```
+WIFEXITED(wstatus)
+              returns true if the child terminated normally, that is, by calling exit(3) or _exit(2), or  by  returning
+              from main().
+
+       WEXITSTATUS(wstatus)
+              returns  the exit status of the child.  This consists of the least significant 8 bits of the status argu‐
+              ment that the child specified in a call to exit(3) or _exit(2) or as the argument for a return  statement
+              in main().  This macro should be employed only if WIFEXITED returned true.
+
+       WIFSIGNALED(wstatus)
+              returns true if the child process was terminated by a signal.
+
+       WTERMSIG(wstatus)
+              returns  the  number  of  the  signal  that  caused the child process to terminate.  This macro should be
+              employed only if WIFSIGNALED returned true.
+
+       WCOREDUMP(wstatus)
+              returns true if the child produced a core dump.  This  macro  should  be  employed  only  if  WIFSIGNALED
+              returned true.
+
+              This macro is not specified in POSIX.1-2001 and is not available on some UNIX implementations (e.g., AIX,
+              SunOS).  Therefore, enclose its use inside #ifdef WCOREDUMP ... #endif.
+
+       WIFSTOPPED(wstatus)
+              returns true if the child process was stopped by delivery of a signal; this is possible only if the  call
+              was done using WUNTRACED or when the child is being traced (see ptrace(2)).
+
+       WSTOPSIG(wstatus)
+              returns  the  number of the signal which caused the child to stop.  This macro should be employed only if
+              WIFSTOPPED returned true.
+       WIFCONTINUED(wstatus)
+              (since Linux 2.6.10) returns true if the child process was resumed by delivery of SIGCONT.
+```
+
 ```c
 #include <sys/types.h>
 #include <sys/wait.h>
