--- a/多进程设计/4-进程退出.md
+++ b/多进程设计/4-进程退出.md
@@ -72,8 +72,14 @@ leo        3574  0.0  0.0      0     0 pts/1    Z+   11:57   0:00 [zombie] <defu
 ```
 就是因为子进程结束了，父进程一直在循环，没去回收子进程  
 当我们强制结束父进程，再看ps aux就可以发现没有僵尸进程了  
-# 等待进程
-让父进程等待子进程的退出
+# 进程回收
+让父进程等待子进程的退出，然后回收
+◼ 在每个进程退出的时候，内核释放该进程所有的资源、包括打开的文件、占用的内存等。但是仍然为其保留一定的信息，这些信息主要主要指进程控制块PCB的信息（包括进程号、退出状态、运行时间等）。  
+◼ 父进程可以通过调用wait或waitpid得到它的退出状态同时彻底清除掉这个进程。  
+◼ wait() 和 waitpid() 函数的功能一样，区别在于，wait() 函数会阻塞， 
+waitpid() 可以设置不阻塞，waitpid() 还可以指定等待哪个子进程结束。  
+◼ 注意：一次wait或waitpid调用只能清理一个子进程，清理多个子进程应使用循环。
+## wait回收
 ```
 #include <sys/types.h>
 #include <sys/wait.h>
@@ -109,7 +115,12 @@ pid_t wait(int *wstatus);
 #include <stdlib.h>
 
 int main(){
-    pid_t pid = fork();
+    //创建5个子进程
+    pid_t pid;
+    for(int i = 0;i<5;i++){
+        pid = fork();
+        if(pid == 0) break;//防止子进程再去创建子进程
+    }
     if(pid > 0){
         printf("father process: pid = %d, ppid = %d\n",getpid(),getppid());
         while(1){
@@ -122,7 +133,6 @@ int main(){
                 printf("子进程退出的状态编号是：%d\n",WEXITSTATUS(st));
             }
             if(WIFSIGNALED(st)){
-                //在终端中用kill 9 child_pid就来退出子进程
                 printf("导致子进程退出的信号为：%d\n",WTERMSIG(st));
             }
         }
@@ -139,4 +149,123 @@ int main(){
     return 0;
 }
 ```
+在终端上使用kill -9 进程号把每一个子进程杀死后的输出为
+```
+child process: pid = 4164, ppid = 4160
+child process: pid = 4163, ppid = 4160
+child process: pid = 4162, ppid = 4160
+导致子进程退出的信号为：9
+child process: pid = 4164, ppid = 4160
+child process: pid = 4163, ppid = 4160
+child process: pid = 4165, ppid = 4160
+child process: pid = 4164, ppid = 4160
+child process: pid = 4163, ppid = 4160
+child process: pid = 4165, ppid = 4160
+导致子进程退出的信号为：9
+child process: pid = 4164, ppid = 4160
+child process: pid = 4165, ppid = 4160
+child process: pid = 4164, ppid = 4160
+child process: pid = 4165, ppid = 4160
+导致子进程退出的信号为：9
+child process: pid = 4165, ppid = 4160
+child process: pid = 4165, ppid = 4160
+child process: pid = 4165, ppid = 4160
+child process: pid = 4165, ppid = 4160
+child process: pid = 4165, ppid = 4160
+导致子进程退出的信号为：9
+```
+## waitpid回收
+可以使用更加多选项的等待进程
+```
+    #include <sys/types.h>
+    #include <sys/wait.h>
+    pid_t waitpid(pid_t pid, int *wstatus, int options);
+        功能：回收指定进程号的子进程，可以设置是否阻塞。
+        参数：
+            - pid:
+                pid > 0 : 某个子进程的pid
+                pid = 0 : 回收当前进程组的所有子进程    
+                pid = -1 : 回收所有的子进程，相当于 wait()  （最常用）
+                pid < -1 : 某个进程组的组id的绝对值(因为参数是负数)，回收指定进程组中的子进程
+            - options：设置阻塞或者非阻塞
+                0 : 阻塞
+                WNOHANG : 非阻塞
+            - 返回值：
+                > 0 : 返回子进程的id
+                = 0 : options=WNOHANG, 表示还有子进程
+                = -1 ：options=WNOHANG, 出现错误或者没有子进程了
+```
+**不阻塞等待所有子进程退出**
+```
+#include <sys/types.h>
+#include <sys/wait.h>
+#include <stdio.h>
+#include <sys/types.h>
+#include <unistd.h>
+#include <stdlib.h>
 
+int main(){
+    //创建5个子进程
+    pid_t pid;
+    for(int i = 0;i<5;i++){
+        pid = fork();
+        if(pid == 0) break;//防止子进程再去创建子进程
+    }
+    if(pid > 0){
+        while(1){
+            printf("father process: pid = %d, ppid = %d\n",getpid(),getppid());
+            sleep(2);//每2秒检查一下有没有子进程退出
+            int st;
+            pid_t pid = waitpid(-1,&st,WNOHANG); //不阻塞等待，每次遇到有退出了就回收一下
+            if(pid == -1){
+                //所有子进程都已经退出了
+                break;
+            }else if(pid == 0){
+                //没有获取到退出的子进程，但是还有子进程存在
+                continue;
+            }else{
+                //有一个子进程退出了
+                if(WIFEXITED(st)){
+                    printf("%d进程已退出,子进程退出的状态编号是：%d\n",pid,WEXITSTATUS(st));
+                }
+                if(WIFSIGNALED(st)){
+                    printf("%d进程已退出,导致子进程退出的信号为：%d\n",pid,WTERMSIG(st));
+                }
+            }
+        }
+    }else{
+        while(1){
+            //printf("child process: pid = %d, ppid = %d\n",getpid(),getppid());
+            sleep(1);
+        }
+        exit(0);
+    }
+
+
+
+    return 0;
+}
+```
+在终端将子进程使用kill -9 子进程号杀死，可以在下面输出发现在waitpid过程中，主进程一直在执行
+```
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+4340进程已退出,导致子进程退出的信号为：9
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+4341进程已退出,导致子进程退出的信号为：9
+father process: pid = 4339, ppid = 3935
+4342进程已退出,导致子进程退出的信号为：9
+father process: pid = 4339, ppid = 3935
+4343进程已退出,导致子进程退出的信号为：9
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+father process: pid = 4339, ppid = 3935
+4344进程已退出,导致子进程退出的信号为：9
+father process: pid = 4339, ppid = 3935
+```
