--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -30,3 +30,191 @@
 更多的数据，**在管道中无法使用 lseek() 来随机的访问数据**。  
 ◼ **匿名管道只能在具有公共祖先的进程（父进程与子进程，或者两个兄弟进程，具有亲缘
 关系）之间使用。**  
+
+# 查看linux各种限制: ulimit -a
+```
+leo@leo-virtual-machine:~/linux/process/comunication$ ulimit -a
+core file size          (blocks, -c) 0
+data seg size           (kbytes, -d) unlimited
+scheduling priority             (-e) 0
+file size               (blocks, -f) unlimited
+pending signals                 (-i) 15400
+max locked memory       (kbytes, -l) 65536
+max memory size         (kbytes, -m) unlimited
+open files                      (-n) 1024
+pipe size            (512 bytes, -p) 8
+POSIX message queues     (bytes, -q) 819200
+real-time priority              (-r) 0
+stack size              (kbytes, -s) 8192
+cpu time               (seconds, -t) unlimited
+max user processes              (-u) 15400
+virtual memory          (kbytes, -v) unlimited
+file locks                      (-x) unlimited
+```
+# 文件配置信息
+可以通过这个函数去看文件的信息，对于管道这种fd可以去看缓冲区大小  
+```
+#include <unistd.h>
+long fpathconf(int fd, int name);
+  fd:文件描述符
+  name: 想要查看的配置名
+_PC_LINK_MAX
+      The maximum number of links to the file.  If fd or path refer to a directory, then the  value  applies  to
+      the whole directory.  The corresponding macro is _POSIX_LINK_MAX.
+
+_PC_MAX_CANON
+      The  maximum length of a formatted input line, where fd or path must refer to a terminal.  The correspond‐
+      ing macro is _POSIX_MAX_CANON.
+
+_PC_MAX_INPUT
+      The maximum length of an input line, where fd or path must refer to a terminal.  The  corresponding  macro
+      is _POSIX_MAX_INPUT.
+
+_PC_NAME_MAX
+      The  maximum  length of a filename in the directory path or fd that the process is allowed to create.  The
+      corresponding macro is _POSIX_NAME_MAX.
+
+_PC_PATH_MAX
+      The maximum length of a relative pathname when path or fd is the current working  directory.   The  corre‐
+      sponding macro is _POSIX_PATH_MAX.
+
+_PC_PIPE_BUF -----------查看管道的大小
+      The  maximum number of bytes that can be written atomically to a pipe of FIFO.  For fpathconf(), fd should
+      refer to a pipe or FIFO.  For fpathconf(), path should refer to a FIFO or a directory; in the latter case,
+      the  returned  value  corresponds  to  FIFOs  created  in  that  directory.   The  corresponding  macro is
+      _POSIX_PIPE_BUF.
+_PC_CHOWN_RESTRICTED
+      This returns a positive value if the use of chown(2) and fchown(2)  for  changing  a  file's  user  ID  is
+      restricted  to a process with appropriate privileges, and changing a file's group ID to a value other than
+      the process's effective group ID or one of its supplementary group IDs is restricted  to  a  process  with
+      appropriate  privileges.   According  to POSIX.1, this variable shall always be defined with a value other
+      than -1.  The corresponding macro is _POSIX_CHOWN_RESTRICTED.
+
+      If fd or path refers to a directory, then the return value applies to all files in that directory.
+
+_PC_NO_TRUNC
+      This returns nonzero if accessing filenames longer than _POSIX_NAME_MAX generates an  error.   The  corre‐
+      sponding macro is _POSIX_NO_TRUNC.
+
+_PC_VDISABLE
+      This  returns  nonzero  if  special character processing can be disabled, where fd or path must refer to a
+      terminal.
+
+
+```
+**通过代码看管道大小**
+```c
+#include <unistd.h>
+#include <stdio.h>
+
+int main(){
+    int pipefd[2];
+    int re = pipe(pipefd);
+    if(re == -1){
+        perror("pipe: ");
+        return -1;
+    }
+    long len = fpathconf(pipefd[1],_PC_PIPE_BUF);
+    if(len == -1){
+        perror("fpathconf: ");
+        return -1;
+    }
+    printf("管道缓冲区大小为：%ld\n",len);
+
+    return 0;
+}
+```
+
+## 匿名管道实现父子进程通信
+```
+#include <unistd.h>
+    int pipe(int pipefd[2]);
+        功能：创建一个匿名管道，用来进程间通信。
+        参数：int pipefd[2] 这个数组是一个传出参数。
+            pipefd[0] 对应的是管道的读端
+            pipefd[1] 对应的是管道的写端
+        返回值：
+            成功 0
+            失败 -1
+
+    管道默认是阻塞的：如果管道中没有数据，read阻塞，如果管道满了，write阻塞
+
+    注意：匿名管道只能用于具有关系的进程之间的通信（父子进程，兄弟进程）
+```
+**使用read函数读取管道的时候，如果管道中没有数据当前进程会被阻塞，直到有数据的时候被唤醒**  
+**示例：子进程给父进程发一个字符串**
+```c
+#include <unistd.h>
+#include <stdio.h>
+#include <errno.h>
+#include <string.h>
+
+
+int main(){
+    int pipefd[2];
+    int re =  pipe(pipefd);
+    if(re == -1){
+        perror("pipe: ");
+        return -1;
+    }
+    pid_t pid = fork();
+    if(pid == -1){
+        perror("fork: ");
+        return -1;
+    }
+    if(pid > 0){
+        char buf[1024] = {0};
+        int len = read(pipefd[0],buf,1024);
+        printf("parent: %s\n",buf);
+    }else if(pid == 0){
+        char *s = "sent to parent!";
+        write(pipefd[1],s,strlen(s));
+    }
+
+
+    return 0;
+}
+```
+**父子进程互相发字符串，但是非同时(半双工)**
+```c
+#include <unistd.h>
+#include <stdio.h>
+#include <errno.h>
+#include <string.h>
+
+
+int main(){
+    int pipefd[2];
+    int re =  pipe(pipefd);
+    if(re == -1){
+        perror("pipe: ");
+        return -1;
+    }
+    pid_t pid = fork();
+    if(pid == -1){
+        perror("fork: ");
+        return -1;
+    }
+    if(pid > 0){
+        char buf[1024] = {0};
+        while(1){
+            int len = read(pipefd[0],buf,1024);
+            printf("parent: %s\n",buf);
+            char *s = "sent to child!";
+            write(pipefd[1],s,strlen(s));
+            sleep(1); ----加sleep是为了让给时间让子进程去读
+        }
+    }else if(pid == 0){
+        char buf[1024] = {0};
+        while(1){
+            char *s = "sent to parent!";
+            write(pipefd[1],s,strlen(s));
+            sleep(1); ----加sleep是为了让给时间让父进程去读
+            int len = read(pipefd[0],buf,1024);
+            printf("child: %s\n",buf);
+        }        
+    }
+    return 0;
+}
+```
+
