--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -126,6 +126,7 @@ int main(){
 ```
 
 ## 匿名管道实现父子进程通信
+**注意**: 需要先创建管道，然后再fork出子进程，因为fork的时候会把管道进行复制，让父子进程的管道描述符指向同一个实际的管道  
 ```
 #include <unistd.h>
     int pipe(int pipefd[2]);
