--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -218,4 +218,57 @@ int main(){
     return 0;
 }
 ```
+## 使用管道来实现重定向，将子进程的输出重定向到父进程
+```
+子进程： ps aux, 子进程结束后，将数据发送给父进程
+    父进程：获取到数据，过滤
+    pipe()
+    execlp()
+    子进程将标准输出 stdout_fileno 重定向到管道的写端。  dup2
+```
+```c
+/*
+实现的功能： 子进程执行ps aux ,将本来应该输出到终端的内容重定向给父进程，
+然后父进程来打印到终端上。
+*/
+
+#include <stdio.h>
+#include <sys/types.h>
+#include <unistd.h>
+#include <sys/types.h>
+#include <sys/wait.h>
+#include <string.h>
+
+int main(){
+    int pipefd[2];
+    int re = pipe(pipefd);
+    if(re == -1){
+        perror("pipe: ");
+        return -1;
+    }
+    pid_t pid = fork();
+    if(pid == -1){
+        perror("fork: ");
+        return -1;
+    }
+    if(pid > 0){
+        // 读数据
+        close(pipefd[1]);
+        char buf[1024] = {0};
+        int len;
+        while((len = read(pipefd[0],buf,sizeof(buf)-1)) > 0){
+            printf("%s",buf);
+            memset(buf,0,sizeof buf);
+        }
+    }else if(pid == 0){
+        // 写数据
+        close(pipefd[0]);
+        dup2(pipefd[1],STDIN_FILENO);//将写的描述符复制给标准写入，原本的标准写入对应的文件会被关闭
+        execlp("ps","ps","aux",NULL);//原本会输出到终端，现在因为重定向了，会写入到管道
+    }
+
+
+    return 0;
+}
+```
 
