--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -265,6 +265,7 @@ int main(){
         close(pipefd[0]);
         dup2(pipefd[1],STDIN_FILENO);//将写的描述符复制给标准写入，原本的标准写入对应的文件会被关闭
         execlp("ps","ps","aux",NULL);//原本会输出到终端，现在因为重定向了，会写入到管道
+        //这里管道写满4k的时候，该进程会阻塞，直到父进程读取之后，子进程才唤醒
     }
 
 
