--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -30,7 +30,7 @@
 更多的数据，**在管道中无法使用 lseek() 来随机的访问数据**。  
 ◼ **匿名管道只能在具有公共祖先的进程（父进程与子进程，或者两个兄弟进程，具有亲缘
 关系）之间使用。**  
-**在管道中使用read函数，如果还有写端在工作，就算当前没有数据read函数也会等待数据的到达，如果管道已经没有进程在写了，那么read函数就会返回0，不再等待了**
+**在管道中使用read函数，如果还有写端在工作，就算当前没有数据read函数也会等待数据的到达，如果管道已经没有进程在写了(关闭写端的文件描述符了，或者进程退出了)，那么read函数就会返回0，不再等待了**
 
 # 查看linux各种限制: ulimit -a
 ```
