--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -305,4 +305,88 @@ int main(){
 }
 ```
 # 将管道设置成非阻塞的读
+```c
+/*
+    实现的功能：
+        子进程往管道写入数据，父进程从管道读取数据
+        如果父进程没有当前没有读到数据，不会被阻塞，而是直接往下运行
+        父进程每隔1s去看看有没有数据可以读，如果有就读，没有就输出0
 
+*/
+
+#include <sys/types.h>
+#include <unistd.h>
+#include <stdio.h>
+#include <string.h>
+#include <fcntl.h>
+
+int main(){
+    int pipefd[2];
+    int re = pipe(pipefd);
+    if(re == -1){
+        perror("pipe: ");
+        return -1;
+    }
+    //给管道的读端设置成非阻塞
+    int flag = fcntl(pipefd[0],F_GETFL);
+    flag |= O_NONBLOCK;
+    fcntl(pipefd[0],F_SETFL,flag);
+    pid_t pid = fork();
+    if(pid == -1){
+        perror("fork: ");
+        return -1;
+    }
+    if(pid > 0){
+        //父进程读
+        close(pipefd[1]);
+        char buf[1024] = {0};
+        while(1){
+            int len = read(pipefd[0],buf,1024);
+            if(len > 0){
+                printf("%s\n",buf);
+            }
+            printf("len = %d\n",len);
+            sleep(1);
+        }
+    }else if(pid == 0){
+        //子进程写
+        close(pipefd[0]);
+        while(1){
+            //每5秒往管道写一次数据
+            char *s = "hello,I'm child process";
+            write(pipefd[1],s,strlen(s));
+            sleep(5);
+        }
+    }
+
+
+    return 0;
+}
+```
+输出效果
+```
+leo@leo-virtual-machine:~/linux/process/comunication$ gcc -o pipNoblock pipeNoblock.c 
+leo@leo-virtual-machine:~/linux/process/comunication$ ./pipNoblock
+len = -1
+hello,I'm child process
+len = 23
+len = -1
+len = -1
+len = -1
+hello,I'm child process
+len = 23
+len = -1
+len = -1
+len = -1
+len = -1
+hello,I'm child process
+len = 23
+len = -1
+len = -1
+len = -1
+len = -1
+hello,I'm child process
+len = 23
+len = -1
+len = -1
+```
