--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -390,3 +390,149 @@ len = 23
 len = -1
 len = -1
 ```
+# 有名管道
+## 创建有名管道
+```
+    创建fifo文件
+    1.通过命令： mkfifo 名字
+    2.通过函数：int mkfifo(const char *pathname, mode_t mode);
+
+    #include <sys/types.h>
+    #include <sys/stat.h>
+    int mkfifo(const char *pathname, mode_t mode);
+        参数：
+            - pathname: 管道名称的路径
+            - mode: 文件的权限 和 open 的 mode 是一样的
+                    是一个八进制的数
+        返回值：成功返回0，失败返回-1，并设置错误号
+```
+```c
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <stdio.h>
+#include <fcntl.h>
+#include <unistd.h>
+
+int main(){
+    //先判断文件是否存在
+    int flag = access("fifoFile",F_OK);
+    if(flag == -1){
+        //不存在，则创建
+        int re = mkfifo("fifoFile",O_CREAT);
+        if(re == -1){
+            perror("mkfifo: ");
+            return -1;
+        }
+    }
+    
+    return 0;
+}
+```
+## 示例：一个进程发数据，一个进程收数据
+**注意**： 
+```
+    有名管道的注意事项：
+        1.一个为只读而打开一个管道的进程会阻塞，直到另外一个进程为只写打开管道
+        2.一个为只写而打开一个管道的进程会阻塞，直到另外一个进程为只读打开管道
+
+    读管道：
+        管道中有数据，read返回实际读到的字节数
+        管道中无数据：
+            管道写端被全部关闭，read返回0，（相当于读到文件末尾）
+            写端没有全部被关闭，read阻塞等待
+    
+    写管道：
+        管道读端被全部关闭，进行异常终止（收到一个SIGPIPE信号）
+        管道读端没有全部关闭：
+            管道已经满了，write会阻塞
+            管道没有满，write将数据写入，并返回实际写入的字节数。
+```
+写进程
+```c
+/*
+    实现功能：每隔2秒，往有名管道写数据
+
+*/
+
+#include <stdio.h>
+#include <unistd.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+
+int main(){
+    //如果不存在，则创建管道
+    int flag = access("fifoFile",F_OK);
+    if(flag == -1){
+        int re = mkfifo("fifoFile",0664);
+        if(re == -1){
+            perror("mkfifo");
+            return -1;
+        }
+        printf("管道不存在，现在创建管道\n");
+    }
+    //打开管道
+    int fd = open("fifoFile",O_WRONLY);
+    if(fd == -1){
+        perror("open: ");
+        return -1;
+    }
+    int id = 0;
+    while(1){
+        char buf[1024] = {0};
+        sprintf(buf,"message: id = %d",++id);
+        printf("发送数据：%s\n",buf);
+        write(fd,buf,strlen(buf));
+        sleep(2);
+    }
+    
+    return 0;
+}
+```
+读进程
+```c
+/*
+    实现功能：每隔2秒，往有名管道读数据
+
+*/
+
+#include <stdio.h>
+#include <unistd.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+
+int main(){
+    //如果不存在，则创建管道
+    int flag = access("fifoFile",F_OK);
+    if(flag == -1){
+        perror("access: ");
+        int re = mkfifo("fifoFile",0664);
+        if(re == -1){
+            perror("mkfifo: ");
+            return -1;
+        }
+    }
+    //打开管道
+    int fd = open("fifoFile",O_RDONLY);
+    if(fd == -1){
+        perror("open: ");
+        return -1;
+    }
+    int id = 0;
+    while(1){
+        char buf[1024] = {0};
+        int len = read(fd,buf,1024);
+        if(len == 0){
+            printf("写客户端已经关闭....\n");
+            break;
+        }
+        printf("接受到数据：%s\n",buf);
+        sleep(2);
+    }
+    
+    return 0;
+}
+```
