--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -12,7 +12,7 @@
 ◼ 进程控制：有些进程希望完全控制另一个进程的执行（如 Debug 进程），此时控制
 进程希望能够拦截另一个进程的所有陷入和异常，并能够及时知道它的状态改变。  
 
-# 管道
+# 匿名管道
 管道也叫无名（匿名）管道，它是是 UNIX 系统 IPC（进程间通信）的最古老形式，
 所有的 UNIX 系统都支持这种通信机制。  
 ◼ 统计一个目录中文件的数目命令：ls | wc –l，为了执行该命令，shell 创建了两
