--- a/多进程设计/5-进程间通信.md
+++ b/多进程设计/5-进程间通信.md
@@ -536,3 +536,166 @@ int main(){
     return 0;
 }
 ```
+## 利用有名管道，两个终端进行聊天
+chatA.c
+```c
+/*
+    实现两个终端进行聊天：
+        1. 只能交替发言
+    1. 创建2个管道，1个读，1个写
+    2. 打开2个管道，1个读，1个写
+    3. while循环，读写交替，A先开始写
+    
+
+*/
+
+#include <unistd.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+
+
+int main(){
+    //创建2个管道，1个读，1个写
+    int flag = access("fifo1",F_OK);
+    if(flag == -1){
+        printf("管道不存在, 现在创建管道1\n");
+        flag = mkfifo("fifo1",0664);
+        if(flag == -1){
+            perror("mkfifo");
+            exit(0);
+        }
+    }
+    flag = access("fifo2",F_OK);
+    if(flag == -1){
+        printf("管道不存在, 现在创建管道1\n");
+        flag = mkfifo("fifo2",0664);
+        if(flag == -1){
+            perror("mkfifo");
+            exit(0);
+        }
+    }
+    //打开2个管道，1个读，1个写
+    int fdw = open("fifo1",O_WRONLY);
+    if(fdw == -1){
+        perror("open");
+        exit(0);
+    }
+    int fdr = open("fifo2",O_RDONLY);
+    if(fdr == -1){
+        perror("open");
+        exit(0);
+    }
+    printf("与chatB建立连接成功!\n");
+    //while循环，读写交替
+    while(1){
+        char buf[1024] = {0};
+        
+        memset(buf,0,sizeof buf);
+        fgets(buf,1024,stdin);
+        flag = write(fdw,buf,1024);
+        if(flag == -1){
+            perror("write");
+            exit(0);
+        }
+        
+        
+        int len = read(fdr,buf,1024);
+        if(len <=0){
+            perror("read");
+            printf("对方客户端出现错误或者已经退出聊天\n");
+            exit(0);    
+        }
+        printf("用户B: %s\n",buf);
+
+        
+    }
+    
+    
+
+
+    return 0;
+}
+```
+chatB.c
+```c
+/*
+    实现两个终端进行聊天：
+        1. 只能交替发言
+    1. 创建2个管道，1个读，1个写
+    2. 打开2个管道，1个读，1个写
+    3. while循环，读写交替，A先开始写
+    
+
+*/
+
+#include <unistd.h>
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <fcntl.h>
+
+
+int main(){
+    //创建2个管道，1个读，1个写
+    int flag = access("fifo1",F_OK);
+    if(flag == -1){
+        printf("管道不存在, 现在创建管道1\n");
+        flag = mkfifo("fifo1",0664);
+        if(flag == -1){
+            perror("mkfifo");
+            exit(0);
+        }
+    }
+    flag = access("fifo2",F_OK);
+    if(flag == -1){
+        printf("管道不存在, 现在创建管道1\n");
+        flag = mkfifo("fifo2",0664);
+        if(flag == -1){
+            perror("mkfifo");
+            exit(0);
+        }
+    }
+    //打开2个管道，1个读，1个写
+    int fdr = open("fifo1",O_RDONLY);
+    if(fdr == -1){
+        perror("open");
+        exit(0);
+    }
+    int fdw = open("fifo2",O_WRONLY);
+    if(fdw == -1){
+        perror("open");
+        exit(0);
+    }
+    printf("与chatA建立连接成功!\n");
+    //while循环，读写交替
+    while(1){
+        char buf[1024] = {0};
+        int len = read(fdr,buf,1024);
+        if(len <=0){
+            perror("read");
+            printf("对方客户端出现错误或者已经退出聊天\n");
+            exit(0);    
+        }
+        printf("用户A: %s\n",buf);
+
+        memset(buf,0,sizeof buf);
+        fgets(buf,1024,stdin);
+        flag = write(fdw,buf,1024);
+        if(flag == -1){
+            perror("write");
+            exit(0);
+        }
+    }
+    
+    
+
+
+    return 0;
+}
+```
